--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ keywords = []
 authors = [{ name = "Carson Farmer" }]
 requires-python = ">=3.13"
 dependencies = [
-    "multiple-minimum-monte-carlo>=0.0.9,<0.0.10",
+    "multiple-minimum-monte-carlo>=0.0.12",
     "tomli-w>=1.2.0,<2",
     "icecream>=2.1.8,<3",
     "orca-pi>=1.0.1",
@@ -16,22 +16,28 @@ dependencies = [
     "prism-pruner",
     "periodictable>=2.0.2,<3",
     "fairchem-core>=2.11.0,<3",
-    # "aimnet@git+https://github.com/cfarm6/aimnetcentral.git@numpy2.0",
-    "aimnet[ase]@git+https://github.com/isayevlab/aimnetcentral.git",
+    "aimnet[ase]",
     "orb-models>=0.5.5,<0.6",
     "torch>=2.7.0,<3",
     "torch-sim-atomistic>=0.4.0,<0.5",
-    "gpu4pyscf-cuda13x>=1.5.1,<2",
-    "cutensor-cu13>=2.4.1,<3",
+    "gpu4pyscf-cuda12x>=1.5.1,<2",
+    "cutensor-cu12>=2.4.1,<3",
     "ty",
     "microsoft-skala>=1.1.0,<2",
+    "pymatgen>=2025.10.7,<2026",
+    "ase>=3.26.0,<4",
+    "jobflow>=0.3",
+    "networkx>=3.1",
+    "rdkit>=2025.9.3,<2026",
+    "pint>=0.25.2,<0.26",
+    "joltqc @ git+https://github.com/ByteDance-Seed/JoltQC.git", "numpy",
 ]
 
 [tool.hatch.metadata]
 allow-direct-references = true
 
 [tool.pixi.system-requirements]
-cuda = "13.0"
+cuda = "12.0"
 
 [tool.pixi.workspace]
 channels = ["nvidia", "conda-forge"]
@@ -39,29 +45,20 @@ platforms = ["linux-64"]
 
 [tool.pixi.dependencies]
 python = ">=3.13"
-ase = ">=3.26.0,<4"
 crest = ">=3.0.2,<4"
-jobflow = ">=0.2.1,<0.3"
-networkx = "==3.1"
 packmol = ">=21.1.2,<22"
-pymatgen = ">=2025.10.7,<2026"
-rich = "<14"
-tblite = ">=0.5.0,<0.6"
-tblite-python = ">=0.5.0,<0.6"
+# tblite = ">=0.5.0,<0.6"
+# tblite-python = ">=0.5.0,<0.6"
 gfortran = ">=14.3.0,<14.4"
-rdkit = ">=2025.9.3,<2026"
-pint = ">=0.25.2,<0.26"
-cuda = ">=13, <14"
-cuda-nvrtc = ">=13.1.80,<14"
-cupy = ">=13.6.0,<14"
-numpy = "<2.4.0"
-nwchem = ">=7.3.1,<8"
+xtb = ">=6.7"
+tblite = ">=0.4.0,<0.5"
+tblite-python = ">=0.4.0,<0.5"
 
 [tool.pixi.pypi-options.dependency-overrides]
 dm-tree = ">= 0.1.9,<0.2"
-gpu4pyscf-libxc-cuda13x = "==0.7"
-numpy = "<2.4.0"
-ase = ">=3.26.0,<4"
+numpy = "<2.5"
+# ase = ">=3.26.0,<4"
+# gpu4pyscf-libxc-cuda13x = "==0.7"
 
 [tool.pixi.pypi-dependencies]
 jfchemistry = { path = ".", editable = true }
