--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,39 +8,38 @@ keywords = []
 authors = [{ name = "Carson Farmer" }]
 requires-python = ">=3.13"
 dependencies = [
-    "multiple-minimum-monte-carlo>=0.0.12",
     "tomli-w>=1.2.0,<2",
-    "icecream>=2.1.8,<3",
-    "orca-pi>=1.0.1",
-    "fireworks>=2.0.6,<3",
+    "numpy",
+    "ty",
+    "pint>=0.25.2,<0.26",
+    "jobflow>=0.3",
+    "networkx>=3.1",
+    "rdkit>=2025.9.3,<2026",
+    "pymatgen>=2025.10.7,<2026",
+    "ase>=3.26.0,<4",
+    "multiple-minimum-monte-carlo>=0.0.12",
     "prism-pruner",
     "periodictable>=2.0.2,<3",
     "fairchem-core>=2.11.0,<3",
     "aimnet[ase]",
     "orb-models>=0.5.5,<0.6",
-    "torch>=2.7.0,<3",
     "torch-sim-atomistic>=0.4.0,<0.5",
-    "gpu4pyscf-cuda12x>=1.5.1,<2",
-    "cutensor-cu12>=2.4.1,<3",
-    "ty",
+    "gpu4pyscf-cuda13x>=1.5.1,<2",
+    "orca-pi>=1.0.1",
     "microsoft-skala>=1.1.0,<2",
-    "pymatgen>=2025.10.7,<2026",
-    "ase>=3.26.0,<4",
-    "jobflow>=0.3",
-    "networkx>=3.1",
-    "rdkit>=2025.9.3,<2026",
-    "pint>=0.25.2,<0.26",
-    "joltqc @ git+https://github.com/ByteDance-Seed/JoltQC.git", "numpy",
+    "cutensor-cu13>=2.4.1,<3",
+    "joltqc @ git+https://github.com/ByteDance-Seed/JoltQC.git",
+    "cupy-cuda13x>=13.6.0,<14", "monty>=2025.3.3,<2026",
 ]
 
 [tool.hatch.metadata]
 allow-direct-references = true
 
 [tool.pixi.system-requirements]
-cuda = "12.0"
+cuda = "13.0"
 
 [tool.pixi.workspace]
-channels = ["nvidia", "conda-forge"]
+channels = [ "conda-forge", "nvidia"]
 platforms = ["linux-64"]
 
 [tool.pixi.dependencies]
@@ -53,12 +52,17 @@ gfortran = ">=14.3.0,<14.4"
 xtb = ">=6.7"
 tblite = ">=0.4.0,<0.5"
 tblite-python = ">=0.4.0,<0.5"
+cuda = ">=13, <14"
+cuda-nvrtc = ">=13.1.115,<14"
+cupy = ">=13.6.0,<14"
+
+
 
 [tool.pixi.pypi-options.dependency-overrides]
 dm-tree = ">= 0.1.9,<0.2"
 numpy = "<2.5"
 # ase = ">=3.26.0,<4"
-# gpu4pyscf-libxc-cuda13x = "==0.7"
+gpu4pyscf-libxc-cuda13x = "==0.7"
 
 [tool.pixi.pypi-dependencies]
 jfchemistry = { path = ".", editable = true }
@@ -82,11 +86,10 @@ pytest-cov = ">=6.0"
 ruff = ">=0.11"
 pre-commit = ">=4.2"
 pytest-xdist = "*"
-marimo = "*"
 
 [tool.pixi.feature.development.pypi-dependencies]
 ty = "*"
-pymatviz = "*"
+
 [tool.pixi.feature.documentation.pypi-dependencies]
 zensical = "*"
 mkdocstrings = "*"
